--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="header__text-box">
                         <h1 class="heading-primary">
                             <span class="heading-primary--main u-margin-bottom-medium">David Lewis</span>
-                            <span class="heading-primary--sub"><i id="currentProfile">Developer</i> ~ Artist</span>
+                            <span class="heading-primary--sub"><div class="heading-secondary--alt" id="currentProfile">Developer</div> ~ <div id="otherProfile">Artist</div></span>
                         </h1>
                     </div>
                 </header>
@@ -116,9 +116,9 @@
                             </h2>
                         </div>
                         <div class="section-portfolio--more-items" id="section-portfolio--items">
-                            <h2 class="heading-tertiary"><a href="https://github.com/dlewis2017">GitHub</a></h2>
-                            <h2 class="heading-tertiary"><a href="https://www.linkedin.com/in/dlewis12/">LinkedIn</a></h2>
-                            <h2 class="heading-tertiary"><a href="/img/David Lewis Resume.pdf">Resume<i class="icon-basic-document"></i></a></h2>
+                            <h2 class="heading-tertiary--alt"><a href="https://github.com/dlewis2017">GitHub</a></h2>
+                            <h2 class="heading-tertiary--alt"><a href="https://www.linkedin.com/in/dlewis12/">LinkedIn</a></h2>
+                            <h2 class="heading-tertiary--alt"><a href="/img/David Lewis Resume.pdf">Resume<i class="icon-basic-sheet"></i></a></h2>
                         </div>
                     </section>
                 </main>
@@ -126,7 +126,7 @@
                 <footer class="footer">
                     <div class="row">
                         <p class="footer__copyright">
-                            Built by <a href="https://github.com/dlewis2017" class="footer__link">David Lewis</a> --- Hosted by <a href="https://p2jde.com" class="footer__link">P2JDE</a>
+                            Built by <a href="https://github.com/dlewis2017" class="footer__link">David Lewis</a> --- Hosted by <a href="http://p2jdesoftware.com/" class="footer__link">P2JDE</a>
                         </p>
                     </div>
                 </footer>
@@ -158,7 +158,7 @@
                     <div class="header__text-box">
                         <h1 class="heading-primary">
                             <span class="heading-primary--main u-margin-bottom-medium">David Lewis</span>
-                            <span class="heading-primary--sub">Developer ~ <i id="currentProfile">Artist</i></span>
+                            <span class="heading-primary--sub"><div id="otherProfile--dev">Developer</div> ~ <div class="heading-secondary--alt" id="currentProfile">Artist</div></span>
                         </h1>
                     </div>
                 </header>
@@ -298,11 +298,6 @@
                                 </a>
                             </div>
                         </div>
-                        <!-- <div class="u-center-text u-margin-bottom-medium">
-                            <h2 class="heading-secondary">
-                                Unity
-                            </h2>
-                        </div> -->
                         <div class="section-portfolio--unity__video">
                             <video width="90%" height="auto" controls>
                                 <source src="unity_files/Unity_Level1.mp4" type="video/mp4">
@@ -315,7 +310,7 @@
                 <footer class="footer">
                     <div class="row">
                         <p class="footer__copyright">
-                            Built by <a href="https://github.com/dlewis2017" class="footer__link">David Lewis</a> --- Hosted by <a href="https://p2jde.com" class="footer__link">P2JDE</a>
+                            Built by <a href="https://github.com/dlewis2017" class="footer__link">David Lewis</a> --- Hosted by <a href="http://p2jdesoftware.com/" class="footer__link">P2JDE</a>
                         </p>
                     </div>
                 </footer>
