--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <label for="navi-toggle" class="navigation__button">
                         <span class="navigation__icon">&nbsp;</span>
                     </label>
-                    <div class="navigation__background">&nbsp;</div>
+                    <div class="navigation__background--art">&nbsp;</div>
 
                     <nav class="navigation__nav">
                         <ul class="navigation__list">
