--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             </h2>
                         </div>
                         <div class="section-portfolio--unity__video">
-                            <video width="90%" height="auto" controls>
+                            <video width="90%" height="auto" autoplay muted loop>
                                 <source src="unity_files/Unity_Rapid_Shot.mp4" type="video/mp4">
                                 Your browser does not support HTML5 video.
                             </video>
