adjusted profile for mobile, comment out pic hyperlinks

--- a/index.html
+++ b/index.html
@@ -195,62 +195,62 @@
                         </div>
                         <div class="row">
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/Drawings/eye_resized.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/Drawings/assassins_creed.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/Drawings/dreamcatcher.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/Drawings/apartment_dots_resized.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/Drawings/goku.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/Drawings/stitch.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/Drawings/falcon_resized.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/Drawings/sonic.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                         </div>
                     </section>
@@ -270,32 +270,32 @@
                         </div>
                         <div class="row">
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/3D/goku.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/3D/rat.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/3D/house1.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                             <div class="col-1-of-4">
-                                <a href="#">
+                                <!-- <a href="#"> -->
                                     <div class="circle">
                                         <img src="img/3D/wine.jpg" alt="drawing" class="circle__img">
                                     </div>
-                                </a>
+                                <!-- </a> -->
                             </div>
                         </div>
                         <div class="section-portfolio--unity__video">
